Update ecommerce